<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:padding="16dp"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/text_lets_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/cabin"
        android:text="@string/lets_begin_str"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:gravity="center_horizontal"
        android:hint="@string/whats_your_name"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_purple"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/save" />

</RelativeLayout>